--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   flutter_native_splash: ^2.4.4
   lottie: ^3.3.1
   google_fonts: ^6.2.1
+  flutter_polyline_points: ^2.1.0
 
 dev_dependencies:
   flutter_test:
